Prevent wrapping on menu names

--- a/style.css
+++ b/style.css
@@ -138,6 +138,7 @@ footer {
     display: flex;
     flex-wrap: nowrap;
     flex-direction: column;
+    -webkit-flex-direction: column;
     justify-content: flex-end;
     align-items: center;
 }
